2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Defined "sha1" as static const std::string.
	* src/MetalinkParserController.cc
	* src/MetalinkParserController.h

2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Defined message digest algorithm name as static const std::string
	* src/DHTTokenTracker.cc
	* src/DHTUtil.cc
	* src/DefaultBtContext.cc
	* src/MSEHandshake.cc
	* src/MessageDigestHelper.cc
	* src/Peer.cc
	* src/messageDigest.cc
	* src/messageDigest.h

2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Made string literals used in SAX parser static const std::string.
	* src/FileMetalinkParserState.cc
	* src/FileMetalinkParserState.h
	* src/FilesMetalinkParserState.cc
	* src/FilesMetalinkParserState.h
	* src/InitialMetalinkParserState.cc
	* src/InitialMetalinkParserState.h
	* src/MetalinkMetalinkParserState.cc
	* src/MetalinkMetalinkParserState.h
	* src/PiecesMetalinkParserState.cc
	* src/PiecesMetalinkParserState.h
	* src/ResourcesMetalinkParserState.cc
	* src/ResourcesMetalinkParserState.h
	* src/VerificationMetalinkParserState.cc
	* src/VerificationMetalinkParserState.h

2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Use A2STR::SLASH_C, A2STR::DOT_C instead of "/", "." respectively.
	* src/A2STR.cc
	* src/A2STR.h
	* src/File.cc

2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Defined static const std::string IP("ip"), PORT("port") and use them
	instead of string literals.
	* src/DefaultPeerListProcessor.cc
	* src/DefaultPeerListProcessor.h

2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Made string literals for torrent file processing static const
	std::string.
	* src/BtContext.cc
	* src/BtContext.h
	* src/DefaultBtContext.cc
	* src/DefaultBtContext.h

2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Made string literal for tracker response static const std::string
	* src/BtAnnounce.cc
	* src/BtAnnounce.h
	* src/DefaultBtAnnounce.cc
